# ai-tools

./: README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: index.css  index.html  main.tsx
src-rust/: Cargo.toml
src-rust/common/: Cargo.toml
src-rust/common/src/: ask.rs  config.rs  lib.rs  openai_api.rs
src-rust/src-tauri/: Cargo.toml  tauri.conf.json
src-rust/src-tauri/capabilities/: ask.json  config.json
src-rust/src-tauri/src/: ask.rs  config.rs  lib.rs  main.rs
src/ask/: main.tsx
src/common/: ErrorMsg.tsx  ImplSelect.tsx  ManualMode.tsx  index.ts
src/config/: index.html  main.tsx
