[package]
name = "ai-tools-common"
version = "0.1.0"
edition = "2021"

[dependencies]
smol_str = { version = "0.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"] }
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1.40" }
futures-util = "0.3"
chrono = "0.4"
eventsource-stream = "0.2"
