[package]
name = "ai-tools-tauri"
version = "0.0.1-alpha.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = [] }
tauri-plugin-log = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

ai-tools-common = { path="../common" }

[lints.clippy]
result_unit_err = "allow" # Unit represent error that has been logged. This may not be a good practice, but is used right now.
